"spring boot config"

--- a/src/main/webapp/WEB-INF/html/frontend/frontendshoplist.html
+++ b/src/main/webapp/WEB-INF/html/frontend/frontendshoplist.html
@@ -135,7 +135,7 @@
                         shopHtml +=
                             '<div class="shop-box" data-shop-id="' + item.shopId + '">' +
                             '        <div class="login-box">' +
-                            '            <img src="' + item.shopImg + '" alt="">' +
+                            '            <img src="' +getConetxtPath()+ item.shopImg + '" alt="">' +
                             '        </div>' +
                             '        <div class="shop-info">' +
                             '            <h3 class="shop-name ">' + item.shopName + '</h3>' +
