--- a/src/main/webapp/WEB-INF/html/frontend/productsearch.html
+++ b/src/main/webapp/WEB-INF/html/frontend/productsearch.html
@@ -81,7 +81,7 @@
                         tempHtml += '<dd class="proc-content">' +
                             '    <div class="proc-root">' +
                             '        <img class="proc-img"' +
-                            '             src="' + products.imgAddr + '"' +
+                            '             src="' +getConetxtPath()+ products.imgAddr + '"' +
                             '             alt="' + products.productDesc + '">' +
                             '        <section class="proc-info">' +
                             '            <p class="proc-name">' + products.productName + '</p>' +
