--- a/src/main/webapp/WEB-INF/html/backstage/index.html
+++ b/src/main/webapp/WEB-INF/html/backstage/index.html
@@ -183,7 +183,8 @@
             </div>
 
             <div class="row">
-                <div class="col-lg-12 mb-4">
+                <div class="col-lg-8 mb-4">
+
                     <div class="card h-100">
                         <div class="card-body  table-responsive p-0">
                             <table class="table  m-0">
@@ -201,21 +202,29 @@
                                 </tbody>
                             </table>
                         </div>
+                        <nav aria-label="Page navigation example">
+                            <div class="form-inline float-left">
+                                <label class="my-1 mr-2 d-none d-md-block">一共有 <span
+                                        class="page-total-page"></span> 页,当前是 <span class="page-current-nums"></span> 页</label>
+                            </div>
+
+                            <ul class="pagination mt-3 justify-content-end">
+
+                            </ul>
+                        </nav>
                     </div>
                 </div>
-            </div>
 
-            <nav aria-label="Page navigation example">
-                <div class="form-inline float-left">
-                    <label class="my-1 mr-2 d-none d-md-block">一共有 <span
-                            class="page-total-page"></span> 页,当前是 <span class="page-current-nums"></span> 页</label>
+                <div class="col-lg-4 mb-4">
+                    <div class="card h-100">
+                        <div class="card-header">Money Analysis</div>
+                        <div class="card-body">
+                            <canvas id="myChart" width="400" height="400"></canvas>
+                        </div>
+                    </div>
+
                 </div>
-
-                <ul class="pagination mt-3 justify-content-end">
-
-                </ul>
-
-            </nav>
+            </div>
         </div>
     </div>
 
@@ -316,7 +325,8 @@
     </div>
 </div>
 
-<script src="../resources/assets/js/chartjs/utils.js"></script>
+
+<script src="https://cdn.bootcss.com/Chart.js/2.6.0/Chart.min.js"></script>
 <script src="../resources/assets/js/lib/moment.min.js"></script>
 <script src="../resources/assets/js/lib/jquery.min.js"></script>
 <script src="../resources/assets/js/lib/popper.min.js"></script>
@@ -331,6 +341,54 @@
 <script src="../resources/assets/js/shop/bindaccount.js"></script>
 <script src="../resources/assets/js/shop/loginout.js"></script>
 <script src="../resources/assets/js/shop/changepw.js"></script>
+
+
+<script>
+
+    $(function () {
+
+    });
+
+    var ctx = document.getElementById('myChart').getContext('2d');
+    var myChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+            labels: ['周一', '周二', '', 'Green', 'Purple'],
+            datasets: [{
+                label: '商品日销量',
+                data: [12, 19, 3, 5, 2],
+                backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)',
+                    'rgba(153, 102, 255, 0.2)',
+                    'rgba(255, 159, 64, 0.2)'
+                ],
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)'
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }]
+            }
+        }
+    });
+
+
+</script>
 
 </body>
 
