--- a/src/main/webapp/WEB-INF/html/backstage/shoppage.html
+++ b/src/main/webapp/WEB-INF/html/backstage/shoppage.html
@@ -284,12 +284,13 @@
 
                         <button class="btn btn-primary">Procced to Payment</button>
                         <span class="dropdown">
-                        <button type="button" id="downloadGrid" data-toggle="dropdown"
-                                class="btn btn-secondary py-1 px-2"><span class="material-icons align-text-bottom">save_alt</span></button>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="downloadGrid">
-                         <img id="shop-auth-img" src="/o2o/shopadmin/generateqrcodeshopauth" alt="">
-                        </div>
-                        </span>
+                                <button type="button" id="downloadGrid" data-toggle="dropdown"
+                                        class="btn btn-secondary py-1 px-2"><span
+                                        class="material-icons align-text-bottom">save_alt</span></button>
+                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="downloadGrid">
+                                 <img id="shop-auth-img" src="/o2o/shopadmin/generateqrcodeshopauth" alt="">
+                                </div>
+                                </span>
                         <button type="button" class="btn btn-secondary py-1 px-2"><span
                                 class="material-icons align-text-bottom">today</span></button>
                     </div>
@@ -319,9 +320,6 @@
                                 <p class="text-muted m-0" id="shop-category"></p>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="col-lg-6">
                         <div class="card mb-4">
                             <div class="card-body">
                                 <div class="table-responsive">
@@ -343,9 +341,21 @@
                             </div>
                         </div>
 
+                    </div>
+
+                    <div class="col-lg-6">
+
+                        <div class="card mb-4">
+                            <div class="card-body">
+                                <div id="myChart" style="width: 600px;height:400px;"></div>
+                            </div>
+                        </div>
+
 
                     </div>
                 </div>
+
+
                 <hr class="my-5">
 
                 <p class="text-center text-muted weight-300"><small>In exceptional circumstances, Financial
@@ -420,6 +430,7 @@
 <script src="../resources/assets/js/bootstrap/bootstrap.min.js"></script>
 <script src="../resources/assets/js/chosen-js/chosen.jquery.js"></script>
 <script src="../resources/assets/js/custom.js"></script>
+<script src="../resources/assets/js/chartjs/echarts.min.js"></script>
 
 <script src="../resources/assets/js/shop/common.js"></script>
 
@@ -455,6 +466,7 @@
         }
 
         $.getJSON(getShopInfoUrl, function (data) {
+            console.info(data);
             if (data.success) {
                 showShopInfo(data);
             }
@@ -569,6 +581,50 @@
 
 
     })
+</script>
+
+
+<script>
+
+  /*  function getProductSellDailyList() {
+
+        var initProductSellDailyListUrl = '/o2o/shopadmin/listuserproductmapbyshop';
+
+        $.getJson(initProductSellDailyListUrl, function (data) {
+            console.info(data);
+
+            if (data.success) {
+
+            }
+        })
+    };
+
+    getProductSellDailyList();*/
+
+    var myChart = echarts.init(document.getElementById('myChart'));
+    // 指定图表的配置项和数据
+    var option = {
+        title: {
+            text: 'ECharts 入门示例'
+        },
+        tooltip: {},
+        legend: {
+            data: ['销量']
+        },
+        xAxis: {
+            data: ["衬衫", "羊毛衫", "雪纺衫", "裤子", "高跟鞋", "袜子"]
+        },
+        yAxis: {},
+        series: [{
+            name: '销量',
+            type: 'bar',
+            data: [5, 20, 36, 10, 10, 20]
+        }]
+    };
+
+    // 使用刚指定的配置项和数据显示图表。
+    myChart.setOption(option);
+
 </script>
 
 </body>
