"日销量统计"

--- a/src/main/webapp/WEB-INF/html/backstage/shoppage.html
+++ b/src/main/webapp/WEB-INF/html/backstage/shoppage.html
@@ -300,7 +300,7 @@
             <div class="content">
 
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6">
                         <div class="card mb-4">
                             <div class="card-body">
                                 <div class="mx-5 my-4 px-4 text-center">
@@ -342,19 +342,17 @@
                         </div>
 
                     </div>
-
-                    <div class="col-lg-6">
-
+                    <div class="col-lg-6 col-md-6 col-xs-8">
                         <div class="card mb-4">
                             <div class="card-body">
-                                <div id="myChart" style="width: 600px;height:400px;"></div>
+                                <div class="card-title">
+                                    <h5 class="weight-400 mt-4">日销量</h5>
+                                </div>
+                                <div id="myChart" style="width: 100%;height:500px"></div>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
-
 
                 <hr class="my-5">
 
@@ -583,47 +581,53 @@
     })
 </script>
 
-
 <script>
 
-  /*  function getProductSellDailyList() {
+    $(function () {
 
-        var initProductSellDailyListUrl = '/o2o/shopadmin/listuserproductmapbyshop';
+        function iniProductSellDailyHistogram() {
+            var initProductSellDailyUrl = "/o2o/shopadmin/listproductselldailyinfobyshop";
+            $.getJSON(initProductSellDailyUrl, function (data) {
+                console.info(data);
+                if (data.success) {
+                    var myChart = echarts.init(document.getElementById('myChart'));
+                    // 指定图表的配置项和数据
+                    var option = generateStaticEchartPart();
 
-        $.getJson(initProductSellDailyListUrl, function (data) {
-            console.info(data);
+                    option.legend.data = data.legendDate;
+                    option.series = data.series;
+                    option.xAxis = data.xAxis;
+                    // 使用刚指定的配置项和数据显示图表。
+                    myChart.setOption(option);
+                }
+            });
+        }
 
-            if (data.success) {
+        function generateStaticEchartPart() {
+            return {
+                color: ['#003366', '#006699', '#4cabce', '#e5323e'],
+                tooltip: {
+                    trigger: 'axis',
+                    axisPointer: {            // 坐标轴指示器，坐标轴触发有效
+                        type: 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
+                    }
+                },
+                legend: {},
+                grid: {
+                    left: '3%',
+                    right: '4%',
+                    bottom: '3%',
+                    containLabel: true
+                },
+                xAxis: [{}],
+                yAxis: [{type: 'value'}],
+                series: []
+            };
+        }
 
-            }
-        })
-    };
+        iniProductSellDailyHistogram();
 
-    getProductSellDailyList();*/
-
-    var myChart = echarts.init(document.getElementById('myChart'));
-    // 指定图表的配置项和数据
-    var option = {
-        title: {
-            text: 'ECharts 入门示例'
-        },
-        tooltip: {},
-        legend: {
-            data: ['销量']
-        },
-        xAxis: {
-            data: ["衬衫", "羊毛衫", "雪纺衫", "裤子", "高跟鞋", "袜子"]
-        },
-        yAxis: {},
-        series: [{
-            name: '销量',
-            type: 'bar',
-            data: [5, 20, 36, 10, 10, 20]
-        }]
-    };
-
-    // 使用刚指定的配置项和数据显示图表。
-    myChart.setOption(option);
+    });
 
 </script>
 
